# ap-exercises

./: exercise1.cpp
exercise1/: exercise1  exercise1.cpp
exercise1/exercise1.dSYM/Contents/Resources/DWARF/: exercise1
exercise1/exercise1.dSYM/Contents/Resources/Relocations/x86_64/: exercise1.yml
exercise2/: caseTrack  caseTrack.cpp  global_cases.csv  matrixCalc  matvec.cpp
exercise3/: exercise3  exercise3.cpp  matvec  matvec.cpp
exercise4/: caseTrack  matvec
exercise4/matvec.dSYM/Contents/Resources/DWARF/: matvec
exercise5/src/: CMakeCache.txt  CMakeLists.txt  Makefile  caseTrack  caseTrack.cpp  cmake_install.cmake  helper.cpp  helper.h
exercise5/src_matvec/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  matvec  matvec.cpp  testmatvec  testmatvec.cpp
exercise5/src_matvec/Testing/Temporary/: CTestCostData.txt
exercise6/OnlineMUT/: CMakeCache.txt  Course.cpp  Course.h  Makefile  Student.cpp  Student.h  StudentCard.cpp  StudentCard.h  cmake_install.cmake  main.cpp  onlinemut
exercise6/PanSimul/: CMakeCache.txt  Makefile  cmake_install.cmake  panSimul  person.cpp  person.h
exercise7/: CMakeCache.txt  Course.cpp  Course.h  Curriculum.cpp  Lecture.cpp  Lecture.h  Makefile  Practical.cpp  Practical.h  Student.cpp  Student.h  cmake_install.cmake  main.cpp  onlinemut
exercise8/sortable/: CMakeCache.txt  Makefile  cmake_install.cmake  sortable  sortable.cpp
exercise8/vec/: CMakeCache.txt  Makefile  Vec_double.h  cmake_install.cmake  main.cpp  vec
(+1 files in other folders)
